--- a/app/src/main/res/layout/activity_questionnaires.xml
+++ b/app/src/main/res/layout/activity_questionnaires.xml
@@ -63,6 +63,8 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textAlignment="center"
         android:text="What is your age?"
         />
 
@@ -76,18 +78,25 @@
         android:orientation="horizontal"
         android:weightSum="9">
 
+
+
         <RadioGroup
             android:id="@+id/group1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp"
 
-           >
+
+
+            >
         <RadioButton
             android:button="@null"
             android:drawableLeft="@android:drawable/btn_radio"
             android:id="@+id/under15bt"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
             android:text="under 15" />
 
 
@@ -97,6 +106,7 @@
             android:id="@+id/over15bt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="left"
             android:text="over 15" />
 
 
@@ -107,8 +117,10 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textAlignment="center"
             android:text="What is your gender?"
 
             />
@@ -123,14 +135,18 @@
         <RadioGroup
             android:id="@+id/group2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            >
         <RadioButton
             android:button="@null"
             android:drawableLeft="@android:drawable/btn_radio"
             android:id="@+id/malebt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="male" />
+            android:text="male"
+            android:layout_marginLeft="90dp"/>
 
         <RadioButton
             android:button="@null"
@@ -138,7 +154,8 @@
             android:id="@+id/femalebt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="female" />
+            android:text="female"
+            android:layout_marginLeft="50dp"/>
         </RadioGroup>
 
     </LinearLayout>
@@ -147,9 +164,11 @@
 
             android:id="@+id/textView3"
 
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Are you a vegeterian?"
+            android:textSize="20sp"
+            android:textAlignment="center"
             />
 
 
@@ -157,18 +176,23 @@
         android:paddingLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:textSize="20sp"
+        android:textAlignment="center">
 
 <RadioGroup
     android:id="@+id/group3"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    >
         <RadioButton
             android:button="@null"
             android:drawableLeft="@android:drawable/btn_radio"
             android:id="@+id/vegNobt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
             android:text="no" />
 
         <RadioButton
@@ -177,7 +201,8 @@
             android:id="@+id/vegYesbt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="yes" />
+            android:text="yes"
+            android:layout_marginLeft="140dp"/>
 
 </RadioGroup>
     </LinearLayout>
@@ -187,29 +212,34 @@
 
             android:id="@+id/textView4"
 
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="are you vegan?"
-             />
+            android:text="Are you vegan?"
+            android:textSize="20sp"
+            android:textAlignment="center"/>
 
 
     <LinearLayout
         android:paddingLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
 <RadioGroup
     android:id="@+id/group4"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
         <RadioButton
             android:button="@null"
             android:drawableLeft="@android:drawable/btn_radio"
             android:id="@+id/veganNobt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="no" />
+            android:text="no"
+            android:layout_marginLeft="15dp"/>
+
 
 
         <RadioButton
@@ -218,22 +248,23 @@
             android:id="@+id/veganYesbt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="yes" />
+            android:text="yes"
+            android:layout_marginLeft="140dp"/>
+
 
 
 </RadioGroup>
     </LinearLayout>
 
 
+    <TextView
 
-
-        <TextView
-
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="are you married?"
-             />
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Are you married?"
+        android:textAlignment="center"
+        android:textSize="20sp" />
 
     <LinearLayout
         android:paddingLeft="20dp"
@@ -243,13 +274,15 @@
 <RadioGroup
     android:id="@+id/group5"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
         <RadioButton
             android:button="@null"
             android:drawableLeft="@android:drawable/btn_radio"
             android:id="@+id/marriedNobt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
             android:text="no" />
 
         <RadioButton
@@ -258,18 +291,19 @@
             android:id="@+id/marriedYesbt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="yes" />
+            android:text="yes"
+            android:layout_marginLeft="140dp"/>
 
 </RadioGroup>
     </LinearLayout>
 
         <TextView
-
             android:id="@+id/textView7"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="do you have children?"
+            android:text="Do you have children?"
+            android:textSize="20dp"
+            android:textAlignment="center"
              />
 
 
@@ -284,13 +318,15 @@
 <RadioGroup
     android:id="@+id/group6"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
         <RadioButton
             android:button="@null"
             android:drawableLeft="@android:drawable/btn_radio"
             android:id="@+id/childrenNobt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
             android:text="no" />
 
         <RadioButton
@@ -299,7 +335,8 @@
             android:id="@+id/childrenYesbt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="yes" />
+            android:text="yes"
+            android:layout_marginLeft="140dp"/>
 
 
 </RadioGroup>
@@ -308,10 +345,11 @@
         <TextView
 
             android:id="@+id/textView8"
-
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="your trip is for?"
+            android:text="Your trip is for?"
+            android:textAlignment="center"
+            android:textSize="20sp"
           />
 
     <LinearLayout
@@ -324,14 +362,16 @@
 <RadioGroup
     android:id="@+id/group7"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
         <RadioButton
             android:button="@null"
             android:drawableLeft="@android:drawable/btn_radio"
             android:id="@+id/pleasurebt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="pleasure" />
+            android:text="pleasure"
+            android:layout_marginLeft="5dp"/>
 
         <RadioButton
             android:button="@null"
@@ -339,7 +379,8 @@
             android:id="@+id/bussinessbt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="business" />
+            android:text="business"
+            android:layout_marginLeft="120dp"/>
 
 </RadioGroup>
 
@@ -350,9 +391,11 @@
 
             android:id="@+id/textView9"
 
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="part of a group?"
+            android:text="Part of a group?"
+            android:textSize="20sp"
+            android:textAlignment="center"
             />
 
         <LinearLayout
@@ -364,7 +407,8 @@
 <RadioGroup
     android:id="@+id/group8"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
             <RadioButton
                 android:button="@null"
@@ -372,7 +416,8 @@
                 android:id="@+id/groupNobt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="no" />
+                android:text="no"
+                android:layout_marginLeft="15dp"/>
 
             <RadioButton
                 android:button="@null"
@@ -380,16 +425,14 @@
                 android:id="@+id/groupYesbt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="yes" />
+                android:text="yes"
+                android:layout_marginLeft="140dp"/>
 
 
 </RadioGroup>
 
 
 </LinearLayout>
-
-
-
 
 
     <LinearLayout
@@ -415,6 +458,7 @@
             android:id="@+id/sendbt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:text="SEND"
             />
     </LinearLayout>
