--- a/app/src/main/res/layout/activity_reception.xml
+++ b/app/src/main/res/layout/activity_reception.xml
@@ -13,7 +13,7 @@
             android:textColor="#fff"
             android:layout_width="368dp"
             android:layout_height="wrap_content"
-            android:text="Reception"
+            android:text="@string/Reception_str"
             android:textSize="40sp"
             android:textStyle="bold"
             android:textAlignment="center"
