--- a/app/src/main/res/layout/activity_feedback_menu.xml
+++ b/app/src/main/res/layout/activity_feedback_menu.xml
@@ -13,7 +13,7 @@ tools:context="com.example.oryossipof.alphahotal.FeedbackMenuActivity">
     android:layout_gravity="center"
     android:layout_width="368dp"
     android:layout_height="wrap_content"
-    android:text="Feedback Menu"
+    android:text="@string/Feedback_str"
     android:textSize="40sp"
     android:textStyle="bold"
     android:textAlignment="center"
