--- a/app/src/main/res/layout/activity_hotel_housekeeping.xml
+++ b/app/src/main/res/layout/activity_hotel_housekeeping.xml
@@ -12,7 +12,7 @@ tools:context="com.example.oryossipof.alphahotal.HotelHousekeepingActivity">
     android:textColor="#fff"
     android:layout_width="368dp"
     android:layout_height="wrap_content"
-    android:text="Housekeeping"
+    android:text="@string/Housekeeping_str"
     android:layout_gravity="center"
     android:textSize="40sp"
     android:textStyle="bold"
