--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -15,7 +15,7 @@ tools:context="com.example.oryossipof.alphahotal.InformationActivity">
         android:id="@+id/textView"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:text="Information"
+        android:text="@string/Information_str"
         android:textAlignment="center"
         android:textSize="40sp"
         android:textStyle="bold"
