--- a/app/src/main/res/layout/activity_room_service.xml
+++ b/app/src/main/res/layout/activity_room_service.xml
@@ -13,7 +13,7 @@ tools:context="com.example.oryossipof.alphahotal.RoomServiceActivity">
     android:textColor="#fff"
     android:layout_width="368dp"
     android:layout_height="wrap_content"
-    android:text="RoomService"
+    android:text="@string/Room_Service_str"
     android:textSize="40sp"
     android:textStyle="bold"
     android:textAlignment="center"
