--- a/app/src/main/res/layout/activity_security.xml
+++ b/app/src/main/res/layout/activity_security.xml
@@ -13,7 +13,7 @@ tools:context="com.example.oryossipof.alphahotal.SecurityActivity">
     android:layout_gravity="center"
     android:layout_width="368dp"
     android:layout_height="wrap_content"
-    android:text="Security"
+    android:text="@string/Security_str"
     android:textSize="40sp"
     android:textStyle="bold"
     android:textAlignment="center"
