--- a/app/src/main/res/layout/activity_book_trip.xml
+++ b/app/src/main/res/layout/activity_book_trip.xml
@@ -2,16 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/taxi6"
+    android:background="@drawable/taxi7"
     android:orientation="vertical"
     android:padding="20dp">
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/book_a_trip_tit_tv"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/Book_a_Texi_str"
+        android:text="@string/Book_a_Trip_str"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -19,7 +19,7 @@
         android:typeface="monospace" />
 
     <TextView
-        android:id="@+id/areatextView2"
+        android:id="@+id/Destination_Tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="20dp"
@@ -36,12 +36,13 @@
         android:layout_marginRight="20dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:entries="@array/desArray"
         android:id="@+id/spinner_ip"
         android:spinnerMode="dropdown"
         android:textColor="#000"/>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/NumberOfpassTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Number_of_passengers_str"
@@ -61,7 +62,7 @@
         />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/dATEtV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Date_str"
@@ -82,30 +83,11 @@
         android:focusable="false"
         android:textColorHint="#000"/>
 
-    <TextView
-        android:id="@+id/TimeTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/activity_time_str"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#000"
-        android:textSize="22sp"
-        android:typeface="monospace" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/time_view_edit"
-        android:hint="20:00"
-        android:text="20:00"
-        android:editable="false"
-        android:focusable="false"
-        android:textColorHint="#fff"
-        />
 
 
     <Button
-        android:id="@+id/BookTexi_button1"
+        android:layout_marginTop="120dp"
+        android:id="@+id/ordertrip_button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/Book_a_Texi_str" />
