--- a/app/src/main/res/layout/activity_wake_up_call.xml
+++ b/app/src/main/res/layout/activity_wake_up_call.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/taxi6"
+    android:background="@drawable/clock"
     android:orientation="vertical"
     android:padding="20dp">
 
@@ -11,62 +11,21 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/Book_a_Texi_str"
+        android:text="@string/Wake_up_call_str"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#fff"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:textColor="#000"
         android:typeface="monospace" />
 
     <TextView
-        android:id="@+id/areatextView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:text="@string/Destination_str"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#000"
-        android:textSize="22sp"
-        android:typeface="monospace"
-        />
-
-
-    <Spinner
-
-        android:layout_marginRight="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/spinner_ip"
-        android:spinnerMode="dropdown"
-        android:textColor="#000"/>
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Number_of_passengers_str"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#000"
-        android:textSize="22sp"
-        android:typeface="monospace"
-        />
-
-    <Spinner
-        android:layout_marginRight="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/spinner_Number_of_pass"
-        android:spinnerMode="dropdown"
-        android:entries="@array/passArray"
-        />
-
-    <TextView
+        android:layout_marginTop="240dp"
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Date_str"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="22sp"
         android:typeface="monospace"
         />
@@ -80,7 +39,7 @@
         android:hint="@string/Date_str"
         android:textColor="#000"
         android:focusable="false"
-        android:textColorHint="#000"/>
+        android:textColorHint="#fff"/>
 
     <TextView
         android:id="@+id/TimeTv"
@@ -88,7 +47,7 @@
         android:layout_height="wrap_content"
         android:text="@string/activity_time_str"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="22sp"
         android:typeface="monospace" />
 
@@ -101,13 +60,14 @@
         android:editable="false"
         android:focusable="false"
         android:textColorHint="#fff"
+        android:textColor="#fff"
         />
 
 
     <Button
-        android:id="@+id/BookTexi_button1"
+        android:id="@+id/wakeupbt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Book_a_Texi_str" />
+        android:text="@string/wakeUp_call_str" />
 
 </LinearLayout>
